--- a/client/build.gradle
+++ b/client/build.gradle
@@ -18,5 +18,13 @@ dependencies {
   compile 'com.android.support:appcompat-v7:23.2.0'
   compile 'com.android.support:design:23.2.0'
 
+
   testCompile 'junit:junit:4.12'
+  testCompile 'junit:junit:4.12'
+  testCompile 'org.robolectric:robolectric:3.0'
+  testCompile 'org.hamcrest:hamcrest-library:1.3'
+  testCompile 'org.mockito:mockito-core:1.10.19'
+
+  testCompile 'com.squareup.assertj:assertj-android:1.1.1'
+  testCompile 'com.android.support:support-annotations:23.2.0' //to fix dependency conflicts
 }
