--- a/client/build.gradle
+++ b/client/build.gradle
@@ -17,7 +17,7 @@ dependencies {
 
   compile 'com.android.support:appcompat-v7:23.2.0'
   compile 'com.android.support:design:23.2.0'
-
+  compile 'com.jakewharton:butterknife:7.0.1'
 
   testCompile 'junit:junit:4.12'
   testCompile 'junit:junit:4.12'
