--- a/client/build.gradle
+++ b/client/build.gradle
@@ -19,6 +19,11 @@ dependencies {
   compile 'com.android.support:design:23.2.0'
   compile 'com.jakewharton:butterknife:7.0.1'
 
+  compile 'com.squareup.retrofit2:retrofit:2.0.0-beta4'
+  compile 'com.squareup.retrofit2:converter-gson:2.0.0-beta4'
+  compile 'com.squareup.retrofit2:adapter-rxjava:2.0.0-beta4'
+  compile 'com.google.code.gson:gson:2.6.1'
+
   testCompile 'junit:junit:4.12'
   testCompile 'junit:junit:4.12'
   testCompile 'org.robolectric:robolectric:3.0'
