--- a/client/build.gradle
+++ b/client/build.gradle
@@ -24,6 +24,8 @@ dependencies {
   compile 'com.squareup.retrofit2:adapter-rxjava:2.0.0-beta4'
   compile 'com.google.code.gson:gson:2.6.1'
 
+  compile 'com.jakewharton.timber:timber:4.1.1'
+
   testCompile 'junit:junit:4.12'
   testCompile 'junit:junit:4.12'
   testCompile 'org.robolectric:robolectric:3.0'
