--- a/client/build.gradle
+++ b/client/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'me.tatarka.retrolambda'
 
 android {
   compileSdkVersion 23
@@ -10,6 +11,11 @@ android {
     targetSdkVersion 23
     versionCode 1
     versionName "0.1.0"
+  }
+
+  compileOptions {
+    sourceCompatibility JavaVersion.VERSION_1_8
+    targetCompatibility JavaVersion.VERSION_1_8
   }
 }
 
@@ -25,6 +31,8 @@ dependencies {
   compile 'com.google.code.gson:gson:2.6.1'
 
   compile 'com.jakewharton.timber:timber:4.1.1'
+
+  provided "org.projectlombok:lombok:1.16.6"
 
   testCompile 'junit:junit:4.12'
   testCompile 'junit:junit:4.12'
