--- a/client/build.gradle
+++ b/client/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'com.android.application'
 apply plugin: 'me.tatarka.retrolambda'
+apply plugin: 'com.neenbedankt.android-apt'
 
 android {
   compileSdkVersion 23
@@ -31,6 +32,9 @@ dependencies {
   compile 'com.google.code.gson:gson:2.6.1'
 
   compile 'com.jakewharton.timber:timber:4.1.1'
+
+  compile 'com.google.dagger:dagger:2.0.2'
+  apt 'com.google.dagger:dagger-compiler:2.0.2'
 
   provided "org.projectlombok:lombok:1.16.6"
 
