--- a/client/src/main/AndroidManifest.xml
+++ b/client/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.jraska.github.client">
 
     <application
+        android:name=".GitHubClientApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
