--- a/client/build.gradle
+++ b/client/build.gradle
@@ -30,6 +30,7 @@ dependencies {
   compile 'com.android.support:design:23.2.0'
   compile 'com.jakewharton:butterknife:7.0.1'
 
+  compile 'io.reactivex:rxandroid:1.1.0'
   compile 'com.squareup.retrofit2:retrofit:2.0.0-beta4'
   compile 'com.squareup.retrofit2:converter-gson:2.0.0-beta4'
   compile 'com.squareup.retrofit2:adapter-rxjava:2.0.0-beta4'
