--- a/client/src/main/AndroidManifest.xml
+++ b/client/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.jraska.github.client">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
     <application
         android:name=".GitHubClientApp"
         android:allowBackup="true"
