--- a/client/build.gradle
+++ b/client/build.gradle
@@ -29,6 +29,7 @@ dependencies {
   compile 'com.android.support:appcompat-v7:23.2.0'
   compile 'com.android.support:design:23.2.0'
   compile 'com.jakewharton:butterknife:7.0.1'
+  compile 'com.squareup.picasso:picasso:2.5.2'
 
   compile 'io.reactivex:rxandroid:1.1.0'
   compile 'com.squareup.retrofit2:retrofit:2.0.0-beta4'
