--- a/client/build.gradle
+++ b/client/build.gradle
@@ -26,15 +26,15 @@ android {
 
 dependencies {
 
-  compile 'com.android.support:appcompat-v7:23.2.0'
-  compile 'com.android.support:design:23.2.0'
+  compile 'com.android.support:appcompat-v7:23.2.1'
+  compile 'com.android.support:design:23.2.1'
   compile 'com.jakewharton:butterknife:7.0.1'
   compile 'com.squareup.picasso:picasso:2.5.2'
 
   compile 'io.reactivex:rxandroid:1.1.0'
-  compile 'com.squareup.retrofit2:retrofit:2.0.0-beta4'
-  compile 'com.squareup.retrofit2:converter-gson:2.0.0-beta4'
-  compile 'com.squareup.retrofit2:adapter-rxjava:2.0.0-beta4'
+  compile 'com.squareup.retrofit2:retrofit:2.0.0'
+  compile 'com.squareup.retrofit2:converter-gson:2.0.0'
+  compile 'com.squareup.retrofit2:adapter-rxjava:2.0.0'
   compile 'com.google.code.gson:gson:2.6.1'
 
   compile 'com.jakewharton.timber:timber:4.1.1'
@@ -51,5 +51,5 @@ dependencies {
   testCompile 'org.mockito:mockito-core:1.10.19'
 
   testCompile 'com.squareup.assertj:assertj-android:1.1.1'
-  testCompile 'com.android.support:support-annotations:23.2.0' //to fix dependency conflicts
+  testCompile 'com.android.support:support-annotations:23.2.1' //to fix dependency conflicts
 }
