--- a/client/build.gradle
+++ b/client/build.gradle
@@ -19,7 +19,7 @@ android {
     targetCompatibility JavaVersion.VERSION_1_8
   }
 
-  lintOptions{
+  lintOptions {
     ignore 'InvalidPackage'
     ignore 'ValidFragment'
   }
@@ -30,8 +30,13 @@ dependencies {
   compile 'com.android.support:appcompat-v7:23.4.0'
   compile 'com.android.support:design:23.4.0'
   compile 'com.android.support:cardview-v7:23.4.0'
-  compile 'com.jakewharton:butterknife:7.0.1'
   compile 'com.squareup.picasso:picasso:2.5.2'
+
+  compile 'com.jakewharton:butterknife:8.0.1'
+  apt 'com.jakewharton:butterknife-compiler:8.0.1'
+
+  compile 'com.google.dagger:dagger:2.4'
+  apt 'com.google.dagger:dagger-compiler:2.4'
 
   compile 'io.reactivex:rxandroid:1.2.0'
   compile 'com.squareup.retrofit2:retrofit:2.0.2'
@@ -42,9 +47,6 @@ dependencies {
   compile 'com.squareup.okhttp3:logging-interceptor:3.2.0'
 
   compile 'com.jakewharton.timber:timber:4.1.2'
-
-  compile 'com.google.dagger:dagger:2.4'
-  apt 'com.google.dagger:dagger-compiler:2.4'
 
   provided "org.projectlombok:lombok:1.16.8"
 
