--- a/client/build.gradle
+++ b/client/build.gradle
@@ -39,12 +39,15 @@ dependencies {
   apt 'com.google.dagger:dagger-compiler:2.4'
 
   compile 'io.reactivex:rxandroid:1.2.0'
+  compile 'io.reactivex:rxjava:1.1.5'
+
   compile 'com.squareup.retrofit2:retrofit:2.0.2'
   compile 'com.squareup.retrofit2:converter-gson:2.0.2'
   compile 'com.squareup.retrofit2:adapter-rxjava:2.0.2'
   compile 'com.google.code.gson:gson:2.6.2'
-  compile 'com.squareup.okhttp3:okhttp:3.3.0'
-  compile 'com.squareup.okhttp3:logging-interceptor:3.3.0'
+  compile 'com.squareup.okhttp3:okhttp:3.3.1'
+  compile 'com.squareup.okhttp3:logging-interceptor:3.3.1'
+  compile 'com.squareup.okio:okio:1.8.0'
 
   compile 'com.jakewharton.timber:timber:4.1.2'
 
