--- a/client-domain/build.gradle
+++ b/client-domain/build.gradle
@@ -18,32 +18,30 @@ android {
     sourceCompatibility rootProject.ext.sourceCompatibility
     targetCompatibility rootProject.ext.sourceCompatibility
   }
-
-  lintOptions {
-    ignore 'InvalidPackage'
-  }
 }
 
 dependencies {
-  compile 'com.android.support:support-annotations:23.4.0'
+  retrolambdaConfig 'net.orfjackal.retrolambda:retrolambda:2.3.0'
+
+  compile 'com.android.support:support-annotations:24.0.0'
 
   compile 'com.google.dagger:dagger:2.5'
   apt 'com.google.dagger:dagger-compiler:2.5'
 
-  compile 'io.reactivex:rxjava:1.1.5'
+  compile 'io.reactivex:rxjava:1.1.7'
 
-  compile 'com.squareup.retrofit2:retrofit:2.0.2'
-  compile 'com.squareup.retrofit2:converter-gson:2.0.2'
-  compile 'com.squareup.retrofit2:adapter-rxjava:2.0.2'
-  compile 'com.google.code.gson:gson:2.6.2'
-  compile 'com.squareup.okhttp3:okhttp:3.3.1'
-  compile 'com.squareup.okhttp3:logging-interceptor:3.3.1'
-  compile 'com.squareup.okio:okio:1.8.0'
+  compile 'com.squareup.retrofit2:retrofit:2.1.0'
+  compile 'com.squareup.retrofit2:converter-gson:2.1.0'
+  compile 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
+  compile 'com.google.code.gson:gson:2.7'
+  compile 'com.squareup.okhttp3:okhttp:3.4.1'
+  compile 'com.squareup.okhttp3:logging-interceptor:3.4.1'
+  compile 'com.squareup.okio:okio:1.9.0'
 
   compile 'com.jakewharton.timber:timber:4.1.2'
 
   testCompile 'junit:junit:4.12'
   testCompile 'org.hamcrest:hamcrest-library:1.3'
-  testCompile 'org.assertj:assertj-core:3.4.1'
+  testCompile 'org.assertj:assertj-core:3.5.1'
   testCompile 'org.mockito:mockito-core:1.10.19'
 }
