--- a/client/build.gradle
+++ b/client/build.gradle
@@ -37,6 +37,10 @@ dependencies {
 
   compile 'io.reactivex:rxandroid:1.2.1'
 
+  compile 'com.jakewharton.timber:timber:4.2.0'
+
+  compile 'com.facebook.fresco:fresco:0.12.0'
+
   testCompile 'junit:junit:4.12'
   testCompile 'org.robolectric:robolectric:3.0'
   testCompile 'org.hamcrest:hamcrest-library:1.3'
