--- a/client-domain/build.gradle
+++ b/client-domain/build.gradle
@@ -1,23 +1,18 @@
-apply plugin: 'com.android.library'
+apply plugin: 'java'
 apply plugin: 'me.tatarka.retrolambda'
-apply plugin: 'com.neenbedankt.android-apt'
 
+configurations {
+  provided
+}
 
-android {
-  compileSdkVersion rootProject.ext.compileSdkVersion
-  buildToolsVersion rootProject.ext.buildToolsVersion
-
-  defaultConfig {
-    minSdkVersion rootProject.ext.minSdkVersion
-    targetSdkVersion rootProject.ext.targetSdkVersion
-    versionName version
-    versionCode rootProject.ext.versionCode
+sourceSets {
+  main {
+    compileClasspath += configurations.provided
   }
+}
 
-  compileOptions {
-    sourceCompatibility rootProject.ext.sourceCompatibility
-    targetCompatibility rootProject.ext.sourceCompatibility
-  }
+retrolambda{
+  oldJdk System.getenv("JAVA_HOME")
 }
 
 dependencies {
@@ -26,7 +21,7 @@ dependencies {
   compile 'com.android.support:support-annotations:24.1.1'
 
   compile 'com.google.dagger:dagger:2.6'
-  apt 'com.google.dagger:dagger-compiler:2.6'
+  provided 'com.google.dagger:dagger-compiler:2.6'
 
   compile 'io.reactivex:rxjava:1.1.9'
 
