--- a/client/build.gradle
+++ b/client/build.gradle
@@ -29,7 +29,9 @@ dependencies {
   compile 'com.android.support:appcompat-v7:24.1.1'
   compile 'com.android.support:design:24.1.1'
   compile 'com.android.support:cardview-v7:24.1.1'
+
   compile 'com.squareup.picasso:picasso:2.5.2'
+  compile 'com.jakewharton.picasso:picasso2-okhttp3-downloader:1.0.2'
 
   compile 'com.jakewharton:butterknife:8.2.1'
   apt 'com.jakewharton:butterknife-compiler:8.2.1'
