--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,7 @@ buildscript {
     classpath 'me.tatarka:gradle-retrolambda:3.4.0'
     classpath 'me.tatarka.retrolambda.projectlombok:lombok.ast:0.2.3.a2'
     classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
+    classpath 'com.google.gms:google-services:3.0.0'
   }
 }
 
