--- a/client/build.gradle
+++ b/client/build.gradle
@@ -59,6 +59,9 @@ dependencies {
 
   compile 'com.jakewharton.timber:timber:4.3.1'
 
+  compile 'com.google.firebase:firebase-core:10.0.1'
+  compile 'com.google.firebase:firebase-crash:10.0.1'
+
   testCompile 'junit:junit:4.12'
   testCompile 'org.robolectric:robolectric:3.1.4'
   testCompile 'org.hamcrest:hamcrest-library:1.3'
@@ -67,3 +70,5 @@ dependencies {
   testCompile 'com.squareup.assertj:assertj-android:1.1.1'
   testCompile 'com.android.support:support-annotations:25.0.0' //to fix dependency conflicts
 }
+
+apply plugin: 'com.google.gms.google-services'
