--- a/client/build.gradle
+++ b/client/build.gradle
@@ -61,6 +61,7 @@ dependencies {
 
   compile 'com.google.firebase:firebase-core:10.0.1'
   compile 'com.google.firebase:firebase-crash:10.0.1'
+  compile 'com.google.firebase:firebase-config:10.0.1'
 
   testCompile 'junit:junit:4.12'
   testCompile 'org.robolectric:robolectric:3.2.2'
