--- a/client/build.gradle
+++ b/client/build.gradle
@@ -1,6 +1,5 @@
 apply plugin: 'com.android.application'
 apply plugin: 'me.tatarka.retrolambda'
-apply plugin: 'com.neenbedankt.android-apt'
 
 android {
   compileSdkVersion rootProject.ext.compileSdkVersion
@@ -38,7 +37,7 @@ android {
 }
 
 dependencies {
-  retrolambdaConfig 'net.orfjackal.retrolambda:retrolambda:2.4.0'
+  retrolambdaConfig 'net.orfjackal.retrolambda:retrolambda:2.5.0'
 
   compile project(':client-domain')
   compile project(':client-data')
@@ -47,18 +46,18 @@ dependencies {
   compile 'com.android.support:design:25.0.1'
   compile 'com.android.support:cardview-v7:25.0.1'
 
-  compile 'com.facebook.fresco:fresco:1.0.0'
+  compile 'com.facebook.fresco:fresco:1.0.1'
 
-  compile 'com.jakewharton:butterknife:8.4.0'
-  apt 'com.jakewharton:butterknife-compiler:8.4.0'
+  compile 'com.jakewharton:butterknife:8.5.1'
+  annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
 
-  compile 'com.airbnb.android:epoxy:1.5.0'
+  compile 'com.airbnb.android:epoxy:1.6.3'
 
-  apt 'com.google.dagger:dagger-compiler:2.8'
+  annotationProcessor 'com.google.dagger:dagger-compiler:2.9'
 
   compile 'io.reactivex:rxandroid:1.2.1'
 
-  compile 'com.jakewharton.timber:timber:4.5.0'
+  compile 'com.jakewharton.timber:timber:4.5.1'
 
   compile 'com.google.firebase:firebase-core:10.0.1'
   compile 'com.google.firebase:firebase-crash:10.0.1'
@@ -66,10 +65,10 @@ dependencies {
 
   testCompile 'junit:junit:4.12'
   testCompile 'org.robolectric:robolectric:3.2.2'
-  testCompile 'org.mockito:mockito-core:2.6.2'
+  testCompile 'org.mockito:mockito-core:2.7.5'
 
   testCompile 'com.squareup.assertj:assertj-android:1.1.1'
-  testCompile 'com.android.support:support-annotations:25.0.1' //to fix dependency conflicts
+  testCompile 'com.android.support:support-annotations:25.1.0' //to fix dependency conflicts
 }
 
 apply plugin: 'com.google.gms.google-services'
