--- a/client/build.gradle
+++ b/client/build.gradle
@@ -55,7 +55,7 @@ dependencies {
 
   annotationProcessor 'com.google.dagger:dagger-compiler:2.9'
 
-  compile 'io.reactivex:rxandroid:1.2.1'
+  compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
 
   compile 'com.jakewharton.timber:timber:4.5.1'
 
