--- a/build.gradle
+++ b/build.gradle
@@ -25,8 +25,24 @@ ext {
   version = '0.2.0'
   versionCode = 2
   minSdkVersion = 17
-  compileSdkVersion = 24
+  compileSdkVersion = 25
   targetSdkVersion = compileSdkVersion
   buildToolsVersion = '24.0.1'
   sourceCompatibility = JavaVersion.VERSION_1_8
+}
+
+subprojects {
+
+  project.plugins.whenPluginAdded { plugin ->
+    if ('com.android.build.gradle.AppPlugin'.equals(plugin.class.name)
+        || 'com.android.build.gradle.LibraryPlugin'.equals(plugin.class.name)) {
+
+      project.android.testOptions.unitTests.all {
+        testLogging {
+          events 'passed', 'skipped', 'failed', 'standardOut', 'standardError'
+          exceptionFormat 'full'
+        }
+      }
+    }
+  }
 }
