--- a/client-data/build.gradle
+++ b/client-data/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.library'
+apply plugin: 'me.tatarka.retrolambda'
 
 android {
   compileSdkVersion rootProject.ext.compileSdkVersion
@@ -18,6 +19,7 @@ android {
 }
 
 dependencies {
+  retrolambdaConfig 'net.orfjackal.retrolambda:retrolambda:2.5.1'
   annotationProcessor 'com.google.dagger:dagger-compiler:2.10'
 
   compile project(':client-domain')
@@ -28,9 +30,9 @@ dependencies {
   compile 'com.squareup.retrofit2:converter-gson:2.2.0'
   compile 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
   compile 'com.google.code.gson:gson:2.8.0'
-  compile 'com.squareup.okhttp3:okhttp:3.6.0'
-  compile 'com.squareup.okhttp3:logging-interceptor:3.6.0'
-  compile 'com.squareup.okio:okio:1.11.0'
+  compile 'com.squareup.okhttp3:okhttp:3.7.0'
+  compile 'com.squareup.okhttp3:logging-interceptor:3.7.0'
+  compile 'com.squareup.okio:okio:1.12.0'
 
   testCompile 'junit:junit:4.12'
   testCompile 'org.assertj:assertj-core:3.6.2'
