--- a/client-domain/build.gradle
+++ b/client-domain/build.gradle
@@ -1,4 +1,6 @@
 apply plugin: 'java'
+apply plugin: 'me.tatarka.retrolambda'
+
 
 configurations {
   provided
@@ -11,6 +13,8 @@ sourceSets {
 }
 
 dependencies {
+  retrolambdaConfig 'net.orfjackal.retrolambda:retrolambda:2.5.1'
+
   compile 'com.google.dagger:dagger:2.10'
   provided 'com.google.dagger:dagger-compiler:2.10'
 
