--- a/client/build.gradle
+++ b/client/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'me.tatarka.retrolambda'
 
 android {
   compileSdkVersion rootProject.ext.compileSdkVersion
@@ -36,6 +37,8 @@ android {
 }
 
 dependencies {
+  retrolambdaConfig 'net.orfjackal.retrolambda:retrolambda:2.5.1'
+
   compile project(':client-domain')
   compile project(':client-data')
 
