--- a/client-domain/build.gradle
+++ b/client-domain/build.gradle
@@ -20,6 +20,8 @@ dependencies {
 
   compile 'io.reactivex.rxjava2:rxjava:2.0.8'
 
+  compile 'org.threeten:threetenbp:1.3.3:no-tzdb'
+
   testCompile 'junit:junit:4.12'
   testCompile 'org.hamcrest:hamcrest-library:1.3'
   testCompile 'org.assertj:assertj-core:3.6.2'
