--- a/client/build.gradle
+++ b/client/build.gradle
@@ -56,6 +56,7 @@ dependencies {
   annotationProcessor 'com.google.dagger:dagger-compiler:2.10'
 
   compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
+  compile 'com.jakewharton.threetenabp:threetenabp:1.0.5'
 
   compile 'com.jakewharton.timber:timber:4.5.1'
 
