--- a/client-domain/build.gradle
+++ b/client-domain/build.gradle
@@ -19,6 +19,8 @@ dependencies {
   provided 'com.google.dagger:dagger-compiler:2.10'
 
   compile 'io.reactivex.rxjava2:rxjava:2.1.0'
+  compile 'com.squareup.okhttp3:okhttp:3.7.0'
+  compile 'com.squareup.okio:okio:1.12.0'
 
   compile 'org.threeten:threetenbp:1.3.3:no-tzdb'
 
