--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,8 @@ buildscript {
   dependencies {
     classpath 'com.android.tools.build:gradle:2.3.1'
     classpath 'me.tatarka:gradle-retrolambda:3.6.1'
-    classpath 'com.google.gms:google-services:3.0.0'
+    classpath 'com.google.gms:google-services:3.1.0'
+    classpath 'com.google.firebase:firebase-plugins:1.1.0'
   }
 }
 
