--- a/client/build.gradle
+++ b/client/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'com.android.application'
 apply plugin: 'me.tatarka.retrolambda'
+apply plugin: 'com.google.firebase.firebase-perf'
 
 android {
   compileSdkVersion rootProject.ext.compileSdkVersion
@@ -60,9 +61,10 @@ dependencies {
 
   compile 'com.jakewharton.timber:timber:4.5.1'
 
-  compile 'com.google.firebase:firebase-core:10.0.1'
-  compile 'com.google.firebase:firebase-crash:10.0.1'
-  compile 'com.google.firebase:firebase-config:10.0.1'
+  compile 'com.google.firebase:firebase-core:10.2.6'
+  compile 'com.google.firebase:firebase-crash:10.2.6'
+  compile 'com.google.firebase:firebase-config:10.2.6'
+  compile 'com.google.firebase:firebase-perf:10.2.6'
 
   testCompile 'junit:junit:4.12'
   testCompile 'org.robolectric:robolectric:3.3.2'
