--- a/client/build.gradle
+++ b/client/build.gradle
@@ -48,6 +48,11 @@ dependencies {
   compile 'com.android.support:cardview-v7:25.3.1'
   compile 'com.android.support:customtabs:25.3.1'
 
+  compile 'com.google.firebase:firebase-core:10.2.6'
+  compile 'com.google.firebase:firebase-crash:10.2.6'
+  compile 'com.google.firebase:firebase-config:10.2.6'
+  compile 'com.google.firebase:firebase-perf:10.2.6'
+
   compile 'com.facebook.fresco:fresco:1.3.0'
 
   compile 'com.jakewharton:butterknife:8.6.0'
@@ -62,10 +67,7 @@ dependencies {
 
   compile 'com.jakewharton.timber:timber:4.5.1'
 
-  compile 'com.google.firebase:firebase-core:10.2.6'
-  compile 'com.google.firebase:firebase-crash:10.2.6'
-  compile 'com.google.firebase:firebase-config:10.2.6'
-  compile 'com.google.firebase:firebase-perf:10.2.6'
+  testCompile 'com.google.code.gson:gson:2.8.1'
 
   testCompile 'junit:junit:4.12'
   testCompile 'org.robolectric:robolectric:3.3.2'
