--- a/client/build.gradle
+++ b/client/build.gradle
@@ -52,6 +52,10 @@ dependencies {
   compile 'com.google.firebase:firebase-crash:10.2.6'
   compile 'com.google.firebase:firebase-config:10.2.6'
   compile 'com.google.firebase:firebase-perf:10.2.6'
+  compile 'com.google.firebase:firebase-messaging:10.2.6'
+
+  compile "android.arch.lifecycle:runtime:1.0.0-alpha3"
+  annotationProcessor "android.arch.lifecycle:compiler:1.0.0-alpha3"
 
   compile 'com.facebook.fresco:fresco:1.3.0'
 
