--- a/client/build.gradle
+++ b/client/build.gradle
@@ -43,26 +43,27 @@ dependencies {
   compile project(':client-domain')
   compile project(':client-data')
 
-  compile 'com.android.support:appcompat-v7:25.3.1'
-  compile 'com.android.support:design:25.3.1'
-  compile 'com.android.support:cardview-v7:25.3.1'
-  compile 'com.android.support:customtabs:25.3.1'
+  compile 'com.android.support:appcompat-v7:25.4.0'
+  compile 'com.android.support:design:25.4.0'
+  compile 'com.android.support:cardview-v7:25.4.0'
+  compile 'com.android.support:customtabs:25.4.0'
+  compile 'com.android.support:support-compat:25.4.0'
+  compile 'com.android.support:animated-vector-drawable:25.4.0'
 
-  compile 'com.google.firebase:firebase-core:10.2.6'
-  compile 'com.google.firebase:firebase-crash:10.2.6'
-  compile 'com.google.firebase:firebase-config:10.2.6'
-  compile 'com.google.firebase:firebase-perf:10.2.6'
-  compile 'com.google.firebase:firebase-messaging:10.2.6'
+  compile 'com.google.firebase:firebase-core:11.0.2'
+  compile 'com.google.firebase:firebase-crash:11.0.2'
+  compile 'com.google.firebase:firebase-config:11.0.2'
+  compile 'com.google.firebase:firebase-perf:11.0.2'
+  compile 'com.google.firebase:firebase-messaging:11.0.2'
 
   compile "android.arch.lifecycle:runtime:1.0.0-alpha3"
-  annotationProcessor "android.arch.lifecycle:compiler:1.0.0-alpha3"
 
   compile 'com.facebook.fresco:fresco:1.3.0'
 
   compile 'com.jakewharton:butterknife:8.6.0'
   annotationProcessor 'com.jakewharton:butterknife-compiler:8.6.0'
 
-  compile 'com.airbnb.android:epoxy:2.1.0'
+  compile 'com.airbnb.android:epoxy:2.2.0'
 
   annotationProcessor 'com.google.dagger:dagger-compiler:2.11'
 
@@ -74,11 +75,11 @@ dependencies {
   testCompile 'com.google.code.gson:gson:2.8.1'
 
   testCompile 'junit:junit:4.12'
-  testCompile 'org.robolectric:robolectric:3.4-rc2'
-  testCompile 'org.mockito:mockito-core:2.8.9'
+  testCompile 'org.robolectric:robolectric:3.4-rc3'
+  testCompile 'org.mockito:mockito-core:2.8.47'
 
   testCompile 'com.squareup.assertj:assertj-android:1.1.1'
-  testCompile 'com.android.support:support-annotations:25.3.1' //to fix dependency conflicts
+  testCompile 'com.android.support:support-annotations:25.4.0' //to fix dependency conflicts
 }
 
 apply plugin: 'com.google.gms.google-services'
