--- a/client/build.gradle
+++ b/client/build.gradle
@@ -12,6 +12,8 @@ android {
     targetSdkVersion rootProject.ext.targetSdkVersion
     versionName rootProject.ext.version
     versionCode rootProject.ext.versionCode
+
+    testInstrumentationRunner "com.jraska.github.client.TestRunner"
   }
 
   compileOptions {
@@ -77,11 +79,17 @@ dependencies {
 
   testCompile 'junit:junit:4.12'
   testCompile 'org.robolectric:robolectric:3.4-rc3'
+  testCompile 'javax.inject:javax.inject:1'
   testCompile 'org.mockito:mockito-core:2.8.47'
-
-  testCompile 'com.squareup.assertj:assertj-android:1.1.1'
+  testCompile 'org.assertj:assertj-core:3.8.0'
   testCompile 'org.threeten:threetenbp:1.3.3' // to fix failures with three ten db
   testCompile 'com.android.support:support-annotations:25.4.0' //to fix dependency conflicts
+
+  androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2.2'
+  androidTestCompile 'com.android.support.test:runner:0.5'
+  androidTestCompile 'com.android.support:support-annotations:25.4.0' //to fix dependency conflicts
+  androidTestCompile 'org.mockito:mockito-core:2.8.47'
+  androidTestCompile 'com.linkedin.dexmaker:dexmaker-mockito:2.2.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
