--- a/client/build.gradle
+++ b/client/build.gradle
@@ -45,26 +45,26 @@ dependencies {
   compile project(':client-domain')
   compile project(':client-data')
 
-  compile 'com.android.support:appcompat-v7:25.4.0'
-  compile 'com.android.support:design:25.4.0'
-  compile 'com.android.support:cardview-v7:25.4.0'
-  compile 'com.android.support:customtabs:25.4.0'
-  compile 'com.android.support:support-compat:25.4.0'
-  compile 'com.android.support:animated-vector-drawable:25.4.0'
+  compile 'com.android.support:appcompat-v7:26.0.0'
+  compile 'com.android.support:design:26.0.0'
+  compile 'com.android.support:cardview-v7:26.0.0'
+  compile 'com.android.support:customtabs:26.0.0'
+  compile 'com.android.support:support-compat:26.0.0'
+  compile 'com.android.support:animated-vector-drawable:26.0.0'
 
-  compile 'com.google.firebase:firebase-core:11.0.2'
-  compile 'com.google.firebase:firebase-crash:11.0.2'
-  compile 'com.google.firebase:firebase-config:11.0.2'
-  compile 'com.google.firebase:firebase-perf:11.0.2'
-  compile 'com.google.firebase:firebase-messaging:11.0.2'
-  compile 'com.google.firebase:firebase-database:11.0.2'
+  compile 'com.google.firebase:firebase-core:11.0.4'
+  compile 'com.google.firebase:firebase-crash:11.0.4'
+  compile 'com.google.firebase:firebase-config:11.0.4'
+  compile 'com.google.firebase:firebase-perf:11.0.4'
+  compile 'com.google.firebase:firebase-messaging:11.0.4'
+  compile 'com.google.firebase:firebase-database:11.0.4'
 
-  compile "android.arch.lifecycle:runtime:1.0.0-alpha3"
+  compile "android.arch.lifecycle:runtime:1.0.0-alpha8"
 
-  compile 'com.facebook.fresco:fresco:1.3.0'
+  compile 'com.facebook.fresco:fresco:1.4.0'
 
-  compile 'com.jakewharton:butterknife:8.6.0'
-  annotationProcessor 'com.jakewharton:butterknife-compiler:8.6.0'
+  compile 'com.jakewharton:butterknife:8.7.0'
+  annotationProcessor 'com.jakewharton:butterknife-compiler:8.7.0'
 
   compile 'com.airbnb.android:epoxy:2.2.0'
 
@@ -78,12 +78,12 @@ dependencies {
   testCompile 'com.google.code.gson:gson:2.8.1'
 
   testCompile 'junit:junit:4.12'
-  testCompile 'org.robolectric:robolectric:3.4-rc3'
+  testCompile 'org.robolectric:robolectric:3.4'
   testCompile 'javax.inject:javax.inject:1'
   testCompile 'org.mockito:mockito-core:2.8.47'
   testCompile 'org.assertj:assertj-core:3.8.0'
   testCompile 'org.threeten:threetenbp:1.3.3' // to fix failures with three ten db
-  testCompile 'com.android.support:support-annotations:25.4.0' //to fix dependency conflicts
+  testCompile 'com.android.support:support-annotations:26.0.0' //to fix dependency conflicts
 
   androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2.2'
   androidTestCompile 'com.android.support.test:runner:0.5'
