--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
+  ext.kotlin_version = '1.1.3-2'
   repositories {
     jcenter()
   }
@@ -9,6 +10,7 @@ buildscript {
     classpath 'me.tatarka:gradle-retrolambda:3.7.0'
     classpath 'com.google.gms:google-services:3.1.0'
     classpath 'com.google.firebase:firebase-plugins:1.1.0'
+    classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
   }
 }
 
