--- a/client/build.gradle
+++ b/client/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
 apply plugin: 'me.tatarka.retrolambda'
 apply plugin: 'com.google.firebase.firebase-perf'
 
@@ -37,10 +38,16 @@ android {
       keyPassword "github-client"
     }
   }
+
+  testOptions {
+    unitTests.returnDefaultValues = true
+  }
 }
 
 dependencies {
   retrolambdaConfig 'net.orfjackal.retrolambda:retrolambda:2.5.1'
+
+  compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
 
   compile project(':client-domain')
   compile project(':client-data')
@@ -78,7 +85,6 @@ dependencies {
   testCompile 'com.google.code.gson:gson:2.8.1'
 
   testCompile 'junit:junit:4.12'
-  testCompile 'org.robolectric:robolectric:3.4'
   testCompile 'javax.inject:javax.inject:1'
   testCompile 'org.mockito:mockito-core:2.8.47'
   testCompile 'org.assertj:assertj-core:3.8.0'
@@ -87,9 +93,12 @@ dependencies {
 
   androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2.2'
   androidTestCompile 'com.android.support.test:runner:0.5'
-  androidTestCompile 'com.android.support:support-annotations:25.4.0' //to fix dependency conflicts
+  androidTestCompile 'com.android.support:support-annotations:26.0.0' //to fix dependency conflicts
   androidTestCompile 'org.mockito:mockito-core:2.8.47'
   androidTestCompile 'com.linkedin.dexmaker:dexmaker-mockito:2.2.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
+repositories {
+  mavenCentral()
+}
