--- a/client/build.gradle
+++ b/client/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-kapt'
 apply plugin: 'com.google.firebase.firebase-perf'
 
 android {
@@ -69,10 +70,11 @@ dependencies {
 
   compile 'com.jakewharton:butterknife:8.8.1'
   annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+  kapt 'com.jakewharton:butterknife-compiler:8.8.1'
 
   compile 'com.airbnb.android:epoxy:2.5.0'
 
-  annotationProcessor 'com.google.dagger:dagger-compiler:2.11'
+  kapt 'com.google.dagger:dagger-compiler:2.11'
 
   compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
   compile 'com.jakewharton.threetenabp:threetenabp:1.0.5'
@@ -88,10 +90,10 @@ dependencies {
   testCompile 'org.threeten:threetenbp:1.3.6' // to fix failures with three ten db
   testCompile 'com.android.support:support-annotations:26.1.0' //to fix dependency conflicts
 
-  androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2.2'
-  androidTestCompile 'com.android.support.test:runner:0.5'
+  androidTestCompile 'com.android.support.test.espresso:espresso-core:3.0.1'
+  androidTestCompile 'com.android.support.test:runner:1.0.1'
   androidTestCompile 'com.android.support:support-annotations:26.1.0' //to fix dependency conflicts
-  androidTestCompile 'org.mockito:mockito-core:2.10.0'
+  androidTestCompile 'org.mockito:mockito-core:2.9.0'
   androidTestCompile 'com.linkedin.dexmaker:dexmaker-mockito:2.2.0'
 }
 
