--- a/client/build.gradle
+++ b/client/build.gradle
@@ -13,8 +13,8 @@ android {
     applicationId "com.jraska.github.client"
     minSdkVersion 21
     targetSdkVersion 27
-    versionName '0.6.0'
-    versionCode 6
+    versionName '0.7.0'
+    versionCode 7
     multiDexEnabled true
 
     testInstrumentationRunner "com.jraska.github.client.TestRunner"
@@ -96,12 +96,15 @@ dependencies {
 
   androidTestCompile 'com.android.support.test.espresso:espresso-core:3.0.1'
   androidTestCompile 'com.android.support.test:runner:1.0.1'
+  androidTestCompile 'org.assertj:assertj-core:3.9.1'
   androidTestCompile 'com.android.support:support-annotations:27.1.1' //to fix dependency conflicts
   androidTestCompile 'org.mockito:mockito-core:2.9.0'
   // now freezed at 2.9.0, higher version crash the UI tests
   androidTestCompile 'com.linkedin.dexmaker:dexmaker-mockito:2.2.0'
   androidTestCompile 'com.airbnb.okreplay:okreplay:1.4.0'
   androidTestCompile 'com.airbnb.okreplay:espresso:1.4.0'
+  androidTestCompile 'org.assertj:assertj-core:3.9.1'
+
 }
 
 apply plugin: 'com.google.gms.google-services'
