All test results to CI reports (#91)
* Add extra reports to CI

* Add extra reports to CI

* Add extra reports to CI - fix typo

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,7 +22,17 @@ jobs:
           command: ./gradlew lint test
       - store_artifacts:
           path: client/build/reports
-          destination: reports
+          destination: client/reports
+      - store_artifacts:
+          path: client-domain/build/reports
+          destination: client-domain/reports
+      - store_artifacts:
+          path: client-data/build/reports
+          destination: client-data/reports
       - store_test_results:
           path: client/build/test-results
+      - store_test_results:
+          path: client-data/build/test-results
+      - store_test_results:
+          path: client-domain/build/test-results
 
