Push Module and moving things around, cleaning up (#130)
* Create Push Module and move stuff there

* Rename Push module for feature-push

* Create Push Module and move stuff there

* Remove AppBuildConfig as it is not necessary

* Remove VerboseLogger interface and sue @BindsInstance to allow to drop dependencies module

* Move View.kt to core-android module

* Move push test to proper package

* Adding to circle-ci config

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':client', ':core', ':feature-users', ':core-android'
+include ':client', ':core', ':feature-users', ':core-android', ':feature-push'
