--- a/client/build.gradle
+++ b/client/build.gradle
@@ -58,6 +58,7 @@ dependencies {
 
   api project(':core')
   api project(':core-android')
+  api project(':feature-push')
   api project(':feature-users')
 
   implementation 'androidx.appcompat:appcompat:1.1.0-alpha04'
@@ -72,8 +73,6 @@ dependencies {
   implementation 'com.google.firebase:firebase-core:16.0.8'
   implementation 'com.google.firebase:firebase-config:16.4.1'
   implementation 'com.google.firebase:firebase-perf:16.2.4'
-  implementation 'com.google.firebase:firebase-messaging:17.5.0'
-  implementation 'com.google.firebase:firebase-database:16.1.0'
   implementation 'com.crashlytics.sdk.android:crashlytics:2.9.9'
 
   implementation 'androidx.lifecycle:lifecycle-runtime:2.0.0'
@@ -95,7 +94,6 @@ dependencies {
   testImplementation 'junit:junit:4.12'
   testImplementation 'javax.inject:javax.inject:1'
   testImplementation 'org.mockito:mockito-core:2.23.4'
-  testImplementation 'org.assertj:assertj-core:3.11.1'
   testImplementation 'org.threeten:threetenbp:1.3.8' // to fix failures with three ten db
 
   androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
