New core testing module (#139)
* Add core-testing module

* Refactors for less injection code, minor improvements

* Add factory for Service ViewModels, responsibilities refactor

* Remove Push word from PushCommand implementations as it is redundant

* Use enum istead of implcit boolean

* KtLint fix

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':client', ':core', ':feature-users', ':core-android', ':feature-push', ':feature-settings'
+include ':client', ':core', ':core-testing', ':core-android', ':feature-users', ':feature-push', ':feature-settings'
