--- a/lib-identity/build.gradle
+++ b/lib-identity/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 
 android {
@@ -17,14 +18,11 @@ android {
 dependencies {
   api project(':core')
   api project(':core-android')
-  api project(':lib-identity')
 
-  api 'com.google.firebase:firebase-messaging:19.0.1'
-  api 'com.google.firebase:firebase-database:18.0.0'
-
-  implementation 'com.google.dagger:dagger:2.24'
   kapt 'com.google.dagger:dagger-compiler:2.24'
+  api 'com.google.dagger:dagger:2.24'
 
   testImplementation 'junit:junit:4.12'
+  testImplementation project(':core-testing')
   testImplementation 'org.assertj:assertj-core:3.12.2'
 }
