Move library modules into proper dirs (#186)
* Move identity module into lib directory

* Move dynamic feature library dir into lib dir

--- a/settings.gradle
+++ b/settings.gradle
@@ -4,8 +4,8 @@ include ':client',
   ':core-testing',
   ':core-android',
 
-  ':lib-identity',
-  ':lib-dynamic-features',
+  ':lib:identity',
+  ':lib:dynamic-features',
 
   ':feature:users',
   ':feature:push',
