--- a/client/build.gradle
+++ b/client/build.gradle
@@ -74,8 +74,8 @@ dependencies {
 
   api project(':core')
   api project(':core-android')
-  api project(':lib-identity')
-  api project(':lib-dynamic-features')
+  api project(':lib:identity')
+  api project(':lib:dynamic-features')
   api project(':feature:push')
   api project(':feature:users')
   api project(':feature:settings_entrance')
