Add Gradle plugin to aggregate all graph inspection tasks (#215)
* Add Gradle plugin to aggregate all graph tasks

* Add constants for task names, add all items into verification group

* Add proper picking of parameters

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -132,6 +132,14 @@ dependencies {
   androidTestImplementation project(':core-testing')
 }
 
+apply plugin: 'com.jraska.module.graph'
+
+moduleGraphRules {
+  maxHeight = 4
+  moduleLayersFromTheTop = [":feature", ":lib", ":core"]
+  restrinctInLayerDependencies = [":feature", ":lib"]
+}
+
 apply plugin: 'com.google.gms.google-services'
 repositories {
   mavenCentral()
