Run UI tests on Firebase Test Lab (#233)
* Setup GCloud SDK

* Setup GCloud SDK 2

* Setup GCloud SDK 3

* Check GCloud config

* Setup GCloud on ~gcloud/google-cloud-sdk/bin/gcloud

* Run Firebase test lab as part of check

* Setup proper names

* Make dir for gcloud

* See the stacktrace fo gcloud

* Trying to add gcloud to path

* Update Kotlin and AGP

* Adding Gradle options to fix kotlin breaking

* Run only tests and instrumented tests on CI

* Try Gradle ops to make the hell thing pass

* limit gradle memory

* Run only instrumented tests

* Run only instrumented tests

* Different resource

* Remove arguments

* Fix destination dir for app file

* Add back options to Gradel Daemon

* Add back options to Gradel Daemon

* Other options wth Gradle stuff

* Fix stacktrace param

* Try with check again

* Try with check again

* No Daemon

* Try check again

* Try check again

* Another attempt

* Another attempt

* Run Gcloud after all the things

* Try with daemon

* Try completely without firebase test lab

* Try to add empty kts

* Make it a groovy file instead of Kotlin

* Hook Firebase test lab there

* Adding gcloud to path and writign file properly

* Do not add stuff to path

* Remove Firebase test lab task

* Add gcloud to path

* RUn instrumented tests properly

* Try withuot daemon

* Run test as separate command

* Now with daemon

* Finally without Daemon

* Try on real Pixel 4

* Update Readme

* Set the environment variable later

* Try without cache

* Annd with cache again

* Setup all the things at the same time

* Remove empty lines just to start once more

* This wasn't here - removing

* Increase JVM size for gradle

* Try different JVM memory value

* RUn Kotlin in process

* Try 3.5GB memory

* Tryiing smaller MaxPermSize

* Withotu in process compilation

* Less memory for Gradle

* Disable lint tasks

* Put back or

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -146,6 +146,8 @@ moduleGraphAssert {
 }
 
 apply plugin: 'com.google.gms.google-services'
+
+apply from: 'firebase-test-lab.gradle'
 repositories {
   mavenCentral()
 }
