--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,14 +12,20 @@ jobs:
           key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}-{{ checksum  "core/build.gradle" }}-{{ checksum  "core-android/build.gradle" }}
       - run:
           name: Get Dependencies
-          command: ./gradlew androidDependencies
+          command: ./gradlew androidDependencies --no-daemon
       - save_cache:
           paths:
             - ~/.gradle
           key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}-{{ checksum  "core/build.gradle" }}-{{ checksum  "core-android/build.gradle" }}
       - run:
           name: Run Tests
-          command: ./gradlew check
+          command: ./gradlew check --stacktrace --no-parallel --no-daemon
+      - run:
+          name: Run Tests Firebase
+          command: mkdir ~/gcloud
+            && curl https://dl.google.com/dl/cloudsdk/channels/rapid/downloads/google-cloud-sdk-291.0.0-linux-x86_64.tar.gz | tar xz -C ~/gcloud
+            && echo "export PATH=~/gcloud/google-cloud-sdk/bin:$PATH" >> $BASH_ENV
+            && ./gradlew runInstrumentedTestsOnFirebase --stacktrace --no-daemon
       - store_artifacts:
           path: app/build/reports
           destination: app/reports
@@ -35,10 +41,11 @@ jobs:
       - store_test_results:
           path: app/build/test-results
       - store_test_results:
+          path: core-android/build/test-results
+      - store_test_results:
           path: core/build/test-results
       - store_test_results:
           path: feature/users/build/test-results
       - store_test_results:
           path: feature/push/build/test-results
-
 
