--- a/build.gradle
+++ b/build.gradle
@@ -9,8 +9,8 @@ buildscript {
   }
   dependencies {
     classpath 'com.android.tools.build:gradle:3.6.3'
-    classpath 'com.google.gms:google-services:4.3.3'
     classpath 'com.google.firebase:firebase-plugins:2.0.0'
+    classpath 'com.google.gms:google-services:4.3.3'
     classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     classpath 'io.fabric.tools:gradle:1.31.2'
   }
@@ -38,6 +38,14 @@ subprojects {
           exceptionFormat 'full'
         }
       }
+    }
+  }
+}
+
+subprojects {
+  tasks.configureEach {
+    if (name.startsWith("lint")) {
+      enabled = false
     }
   }
 }
