Core dependencies cleanup (#274)
* Small moves out of core-android of things which were not really shared

* Move things into core-api module

* Move things into coe implementation module

* Rename module core-andorid to core-android-api

* Update module graph assert settigns for lower height

* Update checksum computation with module renames

* Add missing okHttp dependency

* Do not use fully qualified name

--- a/app-partial-users/build.gradle
+++ b/app-partial-users/build.gradle
@@ -33,8 +33,9 @@ android {
 dependencies {
   implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
+  implementation project(':core-api')
+  implementation project(':core-android-api')
   implementation project(':core')
-  implementation project(':core-android')
   implementation project(':navigation')
   implementation project(':lib:navigation-deeplink')
   implementation project(':core-testing')
