--- a/feature/push/build.gradle
+++ b/feature/push/build.gradle
@@ -15,8 +15,8 @@ android {
 }
 
 dependencies {
-  implementation project(':core')
-  implementation project(':core-android')
+  implementation project(':core-api')
+  implementation project(':core-android-api')
   implementation project(':lib:identity')
 
   api 'com.google.firebase:firebase-messaging:20.1.2'
