--- a/feature/chrome-custom-tabs/build.gradle
+++ b/feature/chrome-custom-tabs/build.gradle
@@ -15,8 +15,8 @@ android {
 }
 
 dependencies {
-  implementation project(':core')
-  implementation project(':core-android')
+  implementation project(':core-api')
+  implementation project(':core-android-api')
 
   implementation rootProject.ext.dagger
   kapt rootProject.ext.daggerAnnotationProcessor
