--- a/feature/settings/build.gradle
+++ b/feature/settings/build.gradle
@@ -16,8 +16,8 @@ android {
 }
 
 dependencies {
-  implementation project(':core')
-  implementation project(':core-android')
+  implementation project(':core-api')
+  implementation project(':core-android-api')
 
   implementation 'com.airbnb.android:epoxy:3.11.0'
   implementation 'com.jraska:console:1.1.0'
