Proper module names to match :feature -> :feature-api structure (#276)
* Proper module names

* Proper module names to match :feature -> :api

* Add restrictions by api modules

--- a/app-partial-users/build.gradle
+++ b/app-partial-users/build.gradle
@@ -36,8 +36,8 @@ dependencies {
   implementation project(':core-api')
   implementation project(':core-android-api')
   implementation project(':core')
-  implementation project(':navigation')
-  implementation project(':lib:navigation-deeplink')
+  implementation project(':navigation-api')
+  implementation project(':feature:navigation-deeplink')
   implementation project(':core-testing')
   implementation project(':feature:users')
 
