--- a/feature/about/build.gradle
+++ b/feature/about/build.gradle
@@ -19,8 +19,8 @@ dependencies {
 
   implementation project(':core-api')
   implementation project(':core-android-api')
-  implementation project(':navigation')
-  implementation project(':lib:identity-api')
+  implementation project(':navigation-api')
+  implementation project(':feature:identity-api')
 
   kapt rootProject.ext.daggerAnnotationProcessor
   implementation rootProject.ext.dagger
