--- a/settings.gradle
+++ b/settings.gradle
@@ -7,12 +7,12 @@ include ':app',
   ':core-api',
   ':core-testing',
   ':core-android-api',
-  ':navigation',
+  ':navigation-api',
 
-  ':lib:identity',
-  ':lib:identity-api',
-  ':lib:network-status',
-  ':lib:navigation-deeplink',
+  ':feature:identity',
+  ':feature:identity-api',
+  ':feature:network-status',
+  ':feature:navigation-deeplink',
 
   ':feature:users',
   ':feature:push',
