--- a/feature/identity/build.gradle
+++ b/feature/identity/build.gradle
@@ -2,13 +2,15 @@ apply plugin: 'java-library'
 apply plugin: 'kotlin'
 apply plugin: 'kotlin-kapt'
 
+
 dependencies {
-  implementation project(':navigation')
   implementation project(':core-api')
+  implementation project(':feature:identity-api')
 
   kapt rootProject.ext.daggerAnnotationProcessor
   implementation rootProject.ext.dagger
 
   testImplementation 'junit:junit:4.13'
-  testImplementation 'org.mockito:mockito-core:3.5.6'
+  testImplementation project(':core-testing')
+  testImplementation 'org.assertj:assertj-core:3.16.1'
 }
