--- a/feature/navigation-deeplink/build.gradle
+++ b/feature/navigation-deeplink/build.gradle
@@ -2,15 +2,13 @@ apply plugin: 'java-library'
 apply plugin: 'kotlin'
 apply plugin: 'kotlin-kapt'
 
-
 dependencies {
+  implementation project(':navigation-api')
   implementation project(':core-api')
-  implementation project(':lib:identity-api')
 
   kapt rootProject.ext.daggerAnnotationProcessor
   implementation rootProject.ext.dagger
 
   testImplementation 'junit:junit:4.13'
-  testImplementation project(':core-testing')
-  testImplementation 'org.assertj:assertj-core:3.16.1'
+  testImplementation 'org.mockito:mockito-core:3.5.6'
 }
