Add in-app-update implementation (#317)
* Add initial in-app-update implementation

* More logging annd tweaked Flexible/Immediate update logic

* Add a config to control the updates by RemoteConfig, factory to allow testing, later :(

* Remove minifi enabled from debug

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,8 +23,8 @@ android {
     applicationId "com.jraska.github.client"
     minSdkVersion 21
     targetSdkVersion 30
-    versionName '0.21.1'
-    versionCode 81
+    versionName '0.21.4'
+    versionCode 84
     multiDexEnabled true
 
     testInstrumentationRunner "com.jraska.github.client.TestRunner"
@@ -98,6 +98,7 @@ dependencies {
   implementation project(':feature:about')
   implementation project(':feature:shortcuts')
   implementation project(':feature:chrome-custom-tabs')
+  implementation project(':feature:in-app-update')
 
   implementation 'androidx.appcompat:appcompat:1.2.0'
   implementation 'androidx.legacy:legacy-support-v4:1.0.0'
