Report lint issues (#372)
* Add missing lint plugin

* Fix broken test

* Introduce module metadata

* Introduce module metadata

* Introduce back lint

* Disable lint unless ran explicitly

* Add basic LintReport plugin with printing stuff

* Try to add Lint to CI

* Proper name to Lint job

* Add proper analytics reporting

* Add Lint report to scheduled job

* Add Lint report to scheduled job

* Add Lint report to check job to test End to End

* Fix caching, remove lint report from pipeline and add reporting message

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,14 +9,14 @@ jobs:
     steps:
       - checkout
       - restore_cache:
-          key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}-{{ checksum  "core/build.gradle" }}-{{ checksum  "core-android-api/build.gradle" }}
+          key: cache-{{ checksum "build.gradle" }}-{{ checksum  "dependencies.gradle" }}-{{ checksum  "app/build.gradle" }}
       - run:
           name: Get Dependencies
           command: ./gradlew androidDependencies --max-workers=2 --stacktrace
       - save_cache:
           paths:
             - ~/.gradle
-          key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}-{{ checksum  "core/build.gradle" }}-{{ checksum  "core-android-api/build.gradle" }}
+          key: cache-{{ checksum "build.gradle" }}-{{ checksum  "dependencies.gradle" }}-{{ checksum  "app/build.gradle" }}
       - run:
           name: Run Tests
           command: ./gradlew check --max-workers=2 --stacktrace
@@ -35,16 +35,37 @@ jobs:
       - run:
           name: Execute Data Processing
           command: ./gradlew reportModuleStatistics --max-workers=2 --stacktrace --no-configure-on-demand
-      - save_cache:
-          paths:
-            - ~/.gradle
+  lint:
+    environment:
+      JVM_OPTS: -Xmx4096m
+    docker:
+      - image: circleci/android:api-30
+    steps:
+      - checkout
+      - restore_cache:
           key: cache-{{ checksum "build.gradle" }}-{{ checksum  "dependencies.gradle" }}-{{ checksum  "app/build.gradle" }}
+      - run:
+          name: Run Lint
+          command: ./gradlew lint --max-workers=2 --stacktrace
+  lintReport:
+    environment:
+      JVM_OPTS: -Xmx4096m
+    docker:
+      - image: circleci/android:api-30
+    steps:
+      - checkout
+      - restore_cache:
+          key: cache-{{ checksum "build.gradle" }}-{{ checksum  "dependencies.gradle" }}-{{ checksum  "app/build.gradle" }}
+      - run:
+          name: Run Lint Report
+          command: ./gradlew lintStatisticsReport --max-workers=2 --stacktrace
 
 workflows:
   version: 2
   check:
     jobs:
       - build
+      - lint
   statisticsReport:
     triggers:
       - schedule:
@@ -55,4 +76,5 @@ workflows:
                 - master
     jobs:
       - moduleStatisticsReport
+      - lintReport
 
