Remove api dependencies (#463)
* Remove core-api module api dependenices

* Remove remaining api depednencies

--- a/feature/push/build.gradle
+++ b/feature/push/build.gradle
@@ -26,6 +26,10 @@ dependencies {
   implementation rootProject.ext.dagger
   kapt rootProject.ext.daggerAnnotationProcessor
 
+  implementation 'com.jakewharton.timber:timber:4.7.1'
+  implementation rootProject.ext.okHttp
+  implementation 'org.threeten:threetenbp:1.4.4:no-tzdb'
+
   testImplementation 'junit:junit:4.13.2'
   testImplementation 'org.assertj:assertj-core:3.19.0'
 }
