--- a/feature/shortcuts/build.gradle
+++ b/feature/shortcuts/build.gradle
@@ -18,6 +18,10 @@ dependencies {
   implementation project(':core-api')
   implementation project(':core-android-api')
 
+  implementation 'androidx.appcompat:appcompat:1.2.0'
+
   kapt rootProject.ext.daggerAnnotationProcessor
   implementation rootProject.ext.dagger
+
+  implementation rootProject.ext.okHttp
 }
