--- a/app-partial-users/build.gradle
+++ b/app-partial-users/build.gradle
@@ -47,6 +47,9 @@ dependencies {
 
   implementation 'androidx.lifecycle:lifecycle-runtime:2.3.1'
 
+  implementation rootProject.ext.retrofit
+  implementation 'com.jakewharton.timber:timber:4.7.1'
+
   implementation rootProject.ext.fresco
 
   implementation 'com.airbnb.android:epoxy:4.4.4'
