--- a/app/build.gradle
+++ b/app/build.gradle
@@ -129,11 +129,14 @@ dependencies {
   kapt rootProject.ext.daggerAnnotationProcessor
   implementation rootProject.ext.dagger
 
+  implementation rootProject.ext.retrofit
   implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
   implementation 'com.jakewharton.threetenabp:threetenabp:1.3.0'
   implementation rootProject.ext.okHttpLoggingInterceptor
 
-  testImplementation 'com.google.code.gson:gson:2.8.6'
+  implementation 'com.jakewharton.timber:timber:4.7.1'
+
+  implementation 'com.google.code.gson:gson:2.8.6'
 
   testImplementation 'junit:junit:4.13.2'
   testImplementation 'javax.inject:javax.inject:1'
@@ -148,6 +151,11 @@ dependencies {
   androidTestImplementation 'com.airbnb.okreplay:espresso:1.6.0'
   androidTestImplementation 'com.squareup.rx.idler:rx2-idler:0.11.0'
   androidTestImplementation project(':core-testing')
+
+  androidTestImplementation rootProject.ext.retrofit
+  androidTestImplementation rootProject.ext.retrofitGsonConverter
+  androidTestImplementation rootProject.ext.retrofitRxJavaAdapter
+
   kaptAndroidTest rootProject.ext.daggerAnnotationProcessor
 }
 
