--- a/feature/in-app-update/build.gradle
+++ b/feature/in-app-update/build.gradle
@@ -24,5 +24,8 @@ dependencies {
 
   implementation 'com.google.android.play:core:1.10.0'
 
+  implementation 'io.reactivex.rxjava2:rxjava:2.2.21'
+  implementation 'com.jakewharton.timber:timber:4.7.1'
+
   testImplementation 'junit:junit:4.13.2'
 }
