Instrumented test in modules (#477)
* Run instrumented tests in modules

* Remove the if

* Remove after evaluate

* Try the app configuration from the app module

* Do things from the appp module at the end

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -80,6 +80,10 @@ android {
   packagingOptions {
     exclude 'META-INF/licenses/ASM'
   }
+
+  if (gradle.startParameter.taskNames.any { it.contains("Firebase") }) {
+    sourceSets.androidTest.java.srcDirs += ["../feature/about/src/androidTest/java"]
+  }
 }
 
 dependencies {
@@ -176,7 +180,7 @@ play {
 }
 
 project.afterEvaluate {
-  if (gradle.startParameter.taskNames.any{ it.startsWith("publishBundle")}) {
+  if (gradle.startParameter.taskNames.any { it.startsWith("publishBundle") }) {
     def credentials = System.getenv("PLAY_PUBLISHER_CREDENTIALS")
     if (credentials == null) {
       throw new GradleException("PLAY_PUBLISHER_CREDENTIALS not set, cannot release")
