--- a/feature/about/build.gradle
+++ b/feature/about/build.gradle
@@ -6,6 +6,8 @@ android {
   compileSdkVersion 30
   defaultConfig {
     minSdkVersion 24
+
+    testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
   }
 
   compileOptions {
@@ -35,4 +37,8 @@ dependencies {
   testImplementation 'androidx.arch.core:core-testing:2.1.0'
   testImplementation 'org.mockito:mockito-core:3.8.0'
   testImplementation project(':core-testing')
+
+  androidTestImplementation 'junit:junit:4.13.2'
+  androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+  androidTestImplementation 'org.assertj:assertj-core:3.19.0'
 }
