Have running remote cache (#580)
* Running remote cache

* Modify app to invalidate local cache

* Cache only dependencies

* Update cache

* Edit paths

* Disable Firebase Test Lab

* Try with remote cache and scan

* Disable local cache push on CI

* Change cache to store

* Completely disabl elocal cache on CI

* Remove Gradle Enterprise

* Put back the Firebase test lab

* Put previous order of app build.gradle

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,8 +13,8 @@ jobs:
         uses: actions/cache@v2.1.4
         with:
           path: |
-            ~/.gradle/caches
-            ~/.gradle/wrapper
+            ~/.gradle/caches/modules-2
+            ~/.gradle/caches/transforms-2
           key: build-${{ hashFiles('build.gradle') }}-${{ hashFiles('dependencies.gradle') }}-${{ hashFiles('gradle/wrapper/gradle-wrapper.properties') }}-${{ hashFiles('app/build.gradle') }}
       - name: Get Dependencies
         if: steps.cache-dependencies.outputs.cache-hit != 'true'
@@ -36,8 +36,8 @@ jobs:
         uses: actions/cache@v2.1.4
         with:
           path: |
-            ~/.gradle/caches
-            ~/.gradle/wrapper
-          key: lint-${{ hashFiles('build.gradle') }}-${{ hashFiles('dependencies.gradle') }}-${{ hashFiles('gradle/wrapper/gradle-wrapper.properties') }}-${{ hashFiles('app/build.gradle') }}
+            ~/.gradle/caches/modules-2
+            ~/.gradle/caches/transforms-2
+          key: lint--${{ hashFiles('build.gradle') }}-${{ hashFiles('dependencies.gradle') }}-${{ hashFiles('gradle/wrapper/gradle-wrapper.properties') }}-${{ hashFiles('app/build.gradle') }}
       - name: Lint
         run: ./gradlew lint --stacktrace
