--- a/settings.gradle
+++ b/settings.gradle
@@ -25,3 +25,23 @@ include ':app',
   ':feature:about',
   ':feature:shortcuts',
   ':feature:chrome-custom-tabs'
+
+
+buildCache {
+  remote(HttpBuildCache) {
+    url = 'http://34.85.222.61:5071/cache/'
+    allowUntrustedServer = true
+    allowInsecureProtocol = true
+    push = (System.getenv("CI") == "true")
+  }
+
+  local {
+
+    // The rationale behind disabling local cache on CI
+    // is that the large local cache packing and unpacking
+    // is unnecessary overhead and take tens of seconds for larger entries.
+    // Storing all local outputs is ineffective
+    // and leads to archive of Gigabyte in size and yields only low cache hits.
+    enabled = (System.getenv("CI") != "true")
+  }
+}
