Move Firebase implementations to core module (#769)
* Move Firebase implementations to core module

* Add WakeLock permission

--- a/core/src/main/AndroidManifest.xml
+++ b/core/src/main/AndroidManifest.xml
@@ -1,6 +1,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
   package="com.jraska.github.client.core">
 
+  <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+  <uses-permission android:name="android.permission.INTERNET"/>
+  <uses-permission android:name="android.permission.WAKE_LOCK" />
+
   <application>
     <activity android:name=".android.UriHandlerActivity"
       android:exported="true">
@@ -16,5 +20,6 @@
           android:scheme="https"/>
       </intent-filter>
     </activity>
+
   </application>
 </manifest>
