Measure App Size (#934)
* Test app size reporting

* Runs on ubuntu latest

* Add env vars for release signing

* App Size Reporting

* Added App Size plugin

* Fix release signing config

* Better workflow name

* Use alpha 4 to have a readable report

* Move app size into daily reporting

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,6 +6,8 @@ plugins {
   id 'com.jraska.github.client.release'
   id 'com.jraska.module.stats'
   id 'com.jraska.module.lint.report'
+  id 'com.spotify.ruler'
+  id 'com.jraska.appsize.report'
 }
 
 apply plugin: 'com.android.application'
@@ -169,6 +171,15 @@ play {
   track = 'internal'
   serviceAccountCredentials = file("$buildDir/play-publish-key.json")
 }
+
+ruler {
+  abi.set("arm64-v8a")
+  locale.set("en")
+  screenDensity.set(480)
+  sdkVersion.set(27)
+}
+
+ext.referenceDevice = "arm64-v8a-en-480dpi-api27"
 
 project.afterEvaluate {
   if (gradle.startParameter.taskNames.any { it.startsWith("publishBundle") }) {
