--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,7 @@ buildscript {
     classpath 'com.google.firebase:firebase-crashlytics-gradle:2.9.9'
     classpath 'com.google.gms:google-services:4.3.14'
     classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+    classpath("com.spotify.ruler:ruler-gradle-plugin:2.0.0-alpha-4")
   }
 }
 
